--- a/content/data-engineering-101.qmd
+++ b/content/data-engineering-101.qmd
@@ -4,7 +4,7 @@ description: |
   Data engineering focuses on the practical aspects of data collection, data transformation, and data storage, preparing data for analytical or operational use.
 ---
 
-![Data Engineering Domain](https://github.com/ogbinar/DataEngineeringPilipinas/blob/main/assets/1692040311087.png)
+![Data Engineering Domain](../images/1692040311087.png)
 
 ## Data Engineering
 - **Primary Focus**: Data engineering focuses on the practical aspects of data collection, data transformation, and data storage, preparing data for analytical or operational use.
