--- a/about.qmd
+++ b/about.qmd
@@ -1,20 +1,29 @@
 ---
 title: "About Data Engineering Pilipinas"
 description: |
-  Data Engineering Pilipinas is a community for data engineers, data analysts, data scientists, developers, AI / ML engineers, and users of closed and open source data tools and methods / techniques in the Philippines. Data Engineering Pilipinas is a PyData group.
+  Data Engineering Pilipinas, a vibrant PyData community in the Philippines, is dedicated to advancing data engineering knowledge and practices. Founded July 16, 2023, our community has rapidly grown, now boasting nearly 13,000 Facebook group members.
 ---
-
-## Empowering Data Enthusiasts
-
-Data Engineering Pilipinas, a vibrant PyData community in the Philippines, is dedicated to advancing data engineering knowledge and practices. Founded July 16, 2023, our community has rapidly grown, now boasting nearly 13,000 Facebook group members.
-
 ![](images/Picture1.png)
 
 ## Our Mission
 
-We aim to democratize data engineering education, providing open access to learning materials and fostering a collaborative environment for sharing tools and skills.
+Data Engineering Pilipinas is dedicated to democratizing data engineering education by offering open access to learning materials and promoting a collaborative environment for the exchange of tools and skills.
 
-## Community Guidelines
+The community serves as a forum for both users and developers of data tools, facilitating the sharing of ideas and experiences. Data Engineering Pilipinas encourages discussions on best practices, innovative approaches, and emerging technologies in data management, processing, analytics, and visualization. It embraces a wide range of programming languages including Python, R, and SQL, reflecting the diverse methods used within data engineering and data science.
+
+With a commitment to being an accessible, community-driven platform, Data Engineering Pilipinas caters to all levels of expertise, from novice to advanced practitioners. The conferences, tutorials, and talks provided by Data Engineering Pilipinas offer attendees insights into the latest project features as well as cutting-edge use cases.
+
+## Code of Conduct (Based from [PyData](https://pydata.org/code-of-conduct/))
+
+Be kind to others. Do not insult or put down others. Behave professionally. Remember that harassment and sexist, racist, or exclusionary jokes and language are not appropriate for Data Engineering Pilipinas.
+
+All communication should be appropriate for a professional audience including people of many different backgrounds. Sexual language and imagery is not appropriate.
+
+Data Engineering Pilipinas is dedicated to providing a harassment-free event experience for everyone, regardless of gender, sexual orientation, gender identity, and expression, disability, physical appearance, body size, race, or religion. We do not tolerate harassment of participants in any form.
+
+Thank you for helping make this a welcoming, friendly community for all.
+
+## Official Community Guidelines
 
 Our community thrives on respect, collaboration, and shared learning. Here are the guidelines we follow to ensure a positive and productive environment for all members.
 
@@ -47,3 +56,8 @@ Our community thrives on respect, collaboration, and shared learning. Here are t
 
 10. **Keep it Professional**
     Maintain a professional tone in all interactions and adhere to Facebook's guidelines and policies at all times.
+
+## Diversity & Inclusion (Based from [PyData](https://pydata.org/diversity-inclusion/))
+
+Data Engineering Pilipinas welcomes and encourages participation in our community by people of all backgrounds and identities. We are committed to promoting and sustaining a culture that values mutual respect, tolerance, and learning, and we work together as a community to help each other live out these values.
+
